# onym-contracts

./: .gitignore  README.md
plonk/prover/: Cargo.toml  README.md  build.rs
plonk/prover/src/: lib.rs
plonk/prover/src/prover/: mod.rs  plonk.rs  srs.rs
plonk/sep-anarchy/: Cargo.toml  README.md  rust-toolchain.toml  test-vectors.json
plonk/sep-anarchy-ffi/: Cargo.toml  README.md  rust-toolchain.toml
plonk/sep-anarchy-ffi/include/: module.modulemap  onym_anarchy_ffi.h
plonk/sep-anarchy-ffi/src/: lib.rs
plonk/sep-anarchy-ffi/tests/: round_trip.rs
plonk/sep-anarchy/src/: lib.rs  test.rs
plonk/sep-anarchy/test_snapshots/test/: bench_update_commitment.1.json  bench_verify_membership.1.json  test_archive_entry_appends_and_prunes.1.json  test_bump_group_ttl_extends_group_storage.1.json  test_create_group_happy_path.1.json  test_create_group_rejects_duplicate_group_id.1.json  test_create_group_rejects_pi_epoch_nonzero.1.json  test_get_commitment_returns_current_state.1.json  test_get_history_returns_chronological_entries.1.json  test_update_commitment_does_not_mutate_member_count.1.json  test_update_commitment_happy_path.1.json  test_update_commitment_rejects_inactive_group.1.json  test_update_commitment_rejects_non_canonical_c_new.1.json  test_update_commitment_rejects_pi_count_mismatch.1.json  test_update_commitment_rejects_replay_after_successful_update.1.json  test_update_commitment_rejects_replayed_proof.1.json  test_update_commitment_rejects_stale_c_old.1.json  test_update_commitment_rejects_wrong_epoch_old.1.json  test_update_vk_rejects_invalid_tier.1.json  test_update_vk_rotates_membership_vk.1.json  test_update_vk_rotates_update_vk.1.json  test_verify_membership_happy_path.1.json  test_verify_membership_rejects_inactive_group.1.json  test_verify_membership_rejects_wrong_commitment.1.json  test_verify_membership_rejects_wrong_epoch.1.json  test_verify_membership_returns_false_on_inactive_group.1.json
plonk/sep-common-ffi/: Cargo.toml  README.md  rust-toolchain.toml
plonk/sep-common-ffi/include/: module.modulemap  onym_common_ffi.h
plonk/sep-common-ffi/src/: lib.rs
plonk/sep-common-ffi/tests/: round_trip.rs
plonk/sep-democracy/: Cargo.toml  README.md  test-vectors.json
plonk/sep-democracy/src/: lib.rs  test.rs
plonk/sep-democracy/test_snapshots/test/: bench_update_commitment_d11.1.json  bench_update_commitment_d5.1.json  bench_update_commitment_d8.1.json  bench_verify_membership_d11.1.json  bench_verify_membership_d5.1.json  bench_verify_membership_d8.1.json  test_archive_entry_appends_and_prunes.1.json  test_archive_entry_appends_and_prunes_at_window.1.json  test_bump_group_ttl_extends.1.json  test_bump_group_ttl_extends_used_proof_lifetime.1.json  test_create_group_accepts_threshold_100.1.json  test_create_group_rejects_duplicate_group_id.1.json  test_create_then_update_commitment_lifecycle_d11.1.json  test_create_then_update_commitment_lifecycle_d5.1.json  test_create_then_update_commitment_lifecycle_d8.1.json  test_create_then_verify_membership_lifecycle_d11.1.json  test_create_then_verify_membership_lifecycle_d5.1.json  test_create_then_verify_membership_lifecycle_d8.1.json  test_get_commitment_returns_current_state.1.json  test_get_commitment_returns_state.1.json  test_get_history_returns_chronological_entries.1.json  test_update_commitment_happy_path.1.json  test_update_commitment_happy_path_d11.1.json  test_update_commitment_happy_path_d5.1.json  test_update_commitment_happy_path_d8.1.json  test_update_commitment_rejects_cross_tier_proof.1.json  test_update_commitment_rejects_disabled_large_tier.1.json  test_update_commitment_rejects_inactive_group.1.json  test_update_commitment_rejects_non_canonical_c_new.1.json  test_update_commitment_rejects_non_canonical_occupancy_commitment_new.1.json  test_update_commitment_rejects_replayed_proof.1.json  test_update_commitment_rejects_stale_c_old.1.json  test_update_commitment_rejects_stale_occupancy.1.json  test_update_commitment_rejects_stale_occupancy_commitment_old.1.json  test_update_commitment_rejects_wrong_epoch_old.1.json  test_update_commitment_rejects_wrong_threshold_pi.1.json  test_update_commitment_threshold_mismatch_rejected_v2.1.json  test_update_commitment_threshold_supplied_from_storage.1.json  test_update_commitment_threshold_tie_passes_v2.1.json  test_update_vk_rotates_membership_vk.1.json  (+9 more)
plonk/sep-oneonone/: Cargo.toml  README.md  test-vectors.json
plonk/sep-oneonone-ffi/: Cargo.toml  README.md
plonk/sep-oneonone-ffi/include/: module.modulemap  onym_oneonone_ffi.h
plonk/sep-oneonone-ffi/src/: lib.rs
plonk/sep-oneonone-ffi/tests/: round_trip.rs
plonk/sep-oneonone/src/: lib.rs  test.rs
plonk/sep-oneonone/test_snapshots/test/: bench_create_group.1.json  bench_verify_membership.1.json  test_bump_group_ttl_extends.1.json  test_bump_group_ttl_extends_group_storage.1.json  test_create_group_enforces_count_limit.1.json  test_create_group_enforces_group_count_limit.1.json  test_create_group_happy_path.1.json  test_create_group_rejects_duplicate_group_id.1.json  test_create_group_rejects_non_zero_epoch.1.json  test_create_group_restricted_mode_admin_can_create.1.json  (+13 more)
plonk/sep-tyranny-ffi/: Cargo.toml  README.md
plonk/sep-tyranny-ffi/include/: module.modulemap  onym_tyranny_ffi.h
plonk/sep-tyranny-ffi/src/: lib.rs
plonk/sep-tyranny-ffi/tests/: round_trip.rs
plonk/verifier/: Cargo.toml  rust-toolchain.toml
plonk/verifier/src/: byte_helpers.rs  lib.rs  proof_format.rs  test_fixtures.rs  transcript.rs  verifier.rs  verifier_aggregate.rs  verifier_aggregate_evals.rs  verifier_challenges.rs  verifier_lin_poly.rs  verifier_polys.rs  vk_format.rs
pq/prover/: Cargo.toml
pq/prover/src/: fri_prover.rs  lib.rs  merkle_tree.rs  params.rs  proof_bytes.rs
pq/sep-anarchy/: Cargo.toml
pq/sep-anarchy/src/: lib.rs
pq/verifier/: Cargo.toml  rust-toolchain.toml
pq/verifier/src/: field.rs  fri.rs  host_poseidon2.rs  lib.rs  merkle.rs  poseidon2_params.rs  poseidon2_software.rs  proof_format.rs  transcript.rs  verifier.rs  vk_format.rs
traits/: Cargo.toml
traits/src/: lib.rs
(+135 files in other folders)
