[package]
name = "sep-democracy-contract"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contract for SEP Democracy: per-type private group with hidden member counts (occupancy commitment) and quorum threshold. PLONK-verified (BLS12-381 + EF KZG SRS) via the shared plonk-verifier crate."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["alloc"] }
plonk-verifier = { path = "../verifier" }

[dev-dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["alloc", "testutils"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
