[package]
name = "fri-verifier"
version = "0.1.0"
edition = "2021"
description = "Soroban-portable post-quantum FRI verifier shared by pq/sep-* contracts. BabyBear field, Poseidon2-W16 sponge transcript, FRI low-degree test, binary Merkle authentication paths. Mirrors the layout of `plonk-verifier` but swaps the BLS12-381+KZG cryptographic core for hash-based PQ machinery. The Plonky3 prover-side reference is the spec; this crate is the on-chain implementation, byte-equivalent."
license = "MIT"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

# Soroban SDK 26.0.0-rc.1 — same floor as plonk-verifier. The PQ
# verifier uses `env.crypto().poseidon2_babybear_w16(...)` (host
# primitive; assumed available — the wrapper in `host.rs` is the
# single point of contact and falls through to a software reference
# when the host fn is not bound, so the crate is testable today).
#
# rustc floor: 1.91.0 (per soroban-sdk 26's Cargo.toml).
[dependencies]
# `hazmat-crypto` exposes `Env::crypto_hazmat()` and the underlying
# `CryptoHazmat::poseidon2_permutation` host-fn binding. The Poseidon2
# primitive is gated as "hazmat" because callers are responsible for
# supplying secure params (round constants, internal-diagonal matrix).
# We vendor the canonical Horizen Labs BN254 t=3 instance — same
# constants the host primitive's own validation tests use — see
# `poseidon2_params.rs` for provenance.
soroban-sdk = { version = "=26.0.0-rc.1", features = ["hazmat-crypto"] }

[dev-dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["hazmat-crypto", "testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
